[gd_scene load_steps=3 format=3 uid="uid://cgyiql6h4xmd7"]

[ext_resource type="Script" path="res://Scripts/attackComponent.gd" id="1_3rh0l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l415d"]

[node name="AttackComponent" type="Area2D"]
scale = Vector2(2.4, 2.28)
collision_layer = 0
collision_mask = 3
script = ExtResource("1_3rh0l")

[node name="AtkCd" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l415d")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AtkCd" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
